--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,15 @@ django = "^5.1.5"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+
 [tool.black]
 line-length = 120
+
+[tool.isort]
+profile = "black"
