--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.13"
 django = "^5.1.5"
+pymysql = "^1.1.1"
+cryptography = "^44.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -15,6 +17,7 @@ black = "^24.10.0"
 isort = "^5.13.2"
 mypy = "^1.14.1"
 django-stubs = "^5.1.2"
+types-pymysql = "^1.1.0.20241103"
 
 [build-system]
 requires = ["poetry-core"]
