--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,3 +68,7 @@ jobs:
       - name: Test python project
         run: |
           poetry run python manage.py test
+
+      - name: Test python project
+        run: |
+          poetry run python manage.py runserver
