--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.13"
 django = "^5.1.5"
 pymysql = "^1.1.1"
 cryptography = "^44.0.0"
+django-ninja = "^1.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
