:sparkles: update coverage tool

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
         run: |
           poetry run mypy .
 
-#      - name: Setup tmate session 깃헙 디버깅
+#      - name: Setup tmate session 깃헙 액션 ssh로 디버깅
 #        uses: mxschmitt/action-tmate@v3
 
       - name: Test python project
