--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,3 +46,15 @@ ignore_errors = true
 
 [tool.django-stubs]
 django_settings_module = "oz_django_7.settings"
+
+
+[tool.coverage.report]
+fail_under = 9
+
+
+[tool.coverage.run]
+omit = [
+    ".mypy_cache/**/*",
+    "*/migrations/*",
+    "*/*test*.py",
+]
